refactor inclusion of QA tools

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,19 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.2.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.2.x.cfg
+    https://raw.github.com/hvelarde/qa/master/tools.cfg
 
 package-name = cartacapital.portal.externalcontent
 package-extras = [test]
 
-parts += omelette
+parts +=
+    i18ndude
+    omelette
 
-[test]
-defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
+[i18ndude]
+recipe = zc.recipe.egg
+eggs = i18ndude
 
 [omelette]
 recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
+eggs = ${test:eggs}
