Update development configuration
* Use code analysis
* Use rebuild_i18n script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.2.x.cfg
-    https://raw.github.com/hvelarde/qa/master/tools.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
 package-name = cartacapital.portal.externalcontent
 package-extras = [test]
@@ -9,6 +9,12 @@ package-extras = [test]
 parts +=
     i18ndude
     omelette
+    rebuild_i18n-sh
+
+[code-analysis]
+directory = ${buildout:directory}/src/cartacapital/portal/externalcontent
+pre-commit-hook = True
+flake8-ignore = E501
 
 [i18ndude]
 recipe = zc.recipe.egg
@@ -17,3 +23,12 @@ eggs = i18ndude
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[rebuild_i18n-sh]
+recipe = collective.recipe.template
+url = https://raw.github.com/collective/buildout.plonetest/master/templates/rebuild_i18n.sh.in
+output = ${buildout:directory}/bin/rebuild_i18n.sh
+mode = 755
+
+[versions]
+collective.js.jqueryui = 1.8.16.9
