--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts +=
     i18ndude
     omelette
     rebuild_i18n-sh
+    zopepy
 
 [code-analysis]
 directory = ${buildout:directory}/src/cartacapital/portal/externalcontent
@@ -32,3 +33,9 @@ mode = 755
 
 [versions]
 collective.js.jqueryui = 1.8.16.9
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${instance:eggs}
+interpreter = zopepy
+scripts = zopepy
