Ignore .coverage from VCS, but not .coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,8 @@
-[run]
-include = src/*
-
 [report]
 omit =
-    */test*
+    /home/*/.buildout/eggs/*
+    /usr/*
+    bin/test
+    buildout-cache/eggs/*
+    eggs/*
+    parts/*
