--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,6 @@
+[run]
+include = src/sc/externalcontent/*
+
 [report]
 omit =
-    /home/*/.buildout/eggs/*
-    /usr/*
-    bin/test
-    buildout-cache/eggs/*
-    eggs/*
-    parts/*
+    */test*
