--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,9 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.2.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
 
-package-name = cartacapital.portal.externalcontent
+package-name = sc.externalcontent
 package-extras = [test]
 
 parts +=
@@ -13,7 +13,7 @@ parts +=
     zopepy
 
 [code-analysis]
-directory = ${buildout:directory}/src/cartacapital/portal/externalcontent
+directory = ${buildout:directory}/src/sc/externalcontent
 pre-commit-hook = True
 flake8-ignore = E501
 
