--- a/travis.cfg
+++ b/travis.cfg
@@ -18,7 +18,7 @@ parts +=
     node
 
 [code-analysis]
-directory = ${buildout:directory}/src/collective/cover
+directory = ${buildout:directory}/src/sc.externalcontent
 pre-commit-hook = False
 flake8-ignore = E501
 flake8-max-complexity = 12
