--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,11 @@ parts +=
 directory = ${buildout:directory}/src/sc/externalcontent
 pre-commit-hook = True
 flake8-ignore = E501
+flake8-max-complexity = 12
+csslint = False
+jshint = False
+debug-statements = True
+prefer-single-quotes = True
 
 [i18ndude]
 recipe = zc.recipe.egg
