--- a/travis.cfg
+++ b/travis.cfg
@@ -22,9 +22,7 @@ directory = ${buildout:directory}/src/sc/externalcontent
 pre-commit-hook = False
 flake8-ignore = E501
 flake8-max-complexity = 12
-csslint = True
-csslint-bin = bin/csslint
-jshint = True
-jshint-bin = bin/jshint
+csslint = False
+jshint = False
 debug-statements = True
 prefer-single-quotes = True
